packages/compiler-rs/tests/snapshots/v_model__should_support_input_checkbox.snap
---
source: tests/v_model.rs
expression: code
---
import { applyCheckboxModel as _applyCheckboxModel, template as _template } from "vue";
const t0 = _template("<input type=\"checkbox\">", true);
(() => {
  const n0 = t0();
  _applyCheckboxModel(n0, () => model, (_value) => model = _value);
  return n0;
})();
