packages/compiler-rs/tests/snapshots/v_model__should_support_member_expression.snap
---
source: tests/v_model.rs
expression: code
---
import { applyTextModel as _applyTextModel, template as _template } from "vue";
const t0 = _template("<input>", true);
(() => {
  const n0 = t0();
  _applyTextModel(n0, () => setupRef.child, (_value) => setupRef.child = _value);
  return n0;
})();
